fixed spacing of footer

--- a/react-portfolio/src/styles/Footer.css
+++ b/react-portfolio/src/styles/Footer.css
@@ -1,9 +1,9 @@
 .footer {
-  /* position: absolute; */
+  position: absolute;
   bottom: 0;
   width: 100%;
-  border-top: 1px black solid;
   padding-top: 10px;
+  margin-top: 10px;
   background-color: #f0f3f7;
 }
 
