--- a/react-portfolio/src/styles/portfolioContainer.css
+++ b/react-portfolio/src/styles/portfolioContainer.css
@@ -5,7 +5,7 @@
 }
 
 .content-wrap {
-  padding-bottom: 3rem;
+  padding-bottom: 5rem;
   padding-right: 2%;
   padding-left: 2%;
 }
